[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wifi-ndf"
version = "0.1.0"
description = "Spatial Degrees of Freedom for WiFi Mesh Sensing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Karim Khamaisi", email = "karim.khamaisi@unisg.ch"},
    {name = "Bruno Rodrigues", email = "bruno.rodrigues@unisg.ch"},
]
keywords = ["wifi", "sensing", "mesh", "ndf", "deployment", "iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.urls]
Homepage = "https://github.com/brunobastosrodrigues/wifi-ndf"
Paper = "https://arxiv.org/abs/2602.10823"

[tool.setuptools.packages.find]
where = ["src"]
